thumbnails: Make thumbnailing multithreaded

Rework the code to support multiple concurrent thumbnailing threads.

Fixes https://gitlab.gnome.org/GNOME/nautilus/-/issues/1397